# mtgspoilers

./: CONTRIBUTING.md  Cargo.toml  README.md  SCAN.md  config.toml
migrations/: 001_initial.sql
src/: app.rs  config.rs  db.rs  fetcher.rs  main.rs  ui.rs
src/api/: mod.rs  reddit.rs  scryfall.rs
src/filter/: dedup.rs  mod.rs  verify.rs
src/models/: card.rs
