[package]
name = "mtgspoilers"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }

# TUI framework
ratatui = "0.24"
crossterm = "0.27"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

# Image processing (for deduplication)
image = "0.24"
img_hash = "3.2"

# OCR for card text extraction
tesseract = "0.12"

# Reddit API
roux = "2.2"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.13"

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"
